@@ -1,3 +1,7 @@
+2014-11-04  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* pkfont.c: Fix the messed up formatting codes.
+
 2014-11-03  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	* pdfdev.c: Do not convert integer part of real numbers to long int
